# portz

./: .gitignore  .gitmodules  .mtn-ignore  .travis.yml  Makefile.in  NEWS.txt  README  README.md  README.txt  TODO.txt  ci.sh  configure.ac  mingw_port_common.sh  mingw_port_install.sh  mingw_port_runport.sh  portz  portz_build_site  portz_common.sh  portz_dist  portz_easy_install  portz_find_pkg  portz_get  portz_get.sh  portz_get_raw  portz_install  portz_install.sh  portz_install_mingw  portz_install_raw  portz_install_raw.sh  portz_invoke  portz_make  portz_make.sh  portz_make_patch  portz_make_patch_diff_exclude.diff  portz_packback  portz_query  portz_runport.sh  portz_uninstall
repo/: ace-tao.portz  autoconf.mingw  autoconf.portz  automake.mingw  automake.portz  bakefile.portz  boost-headers.portz  boost.portz  botan.portz  bzip2.portz  cmake.portz  cppcheck.portz  crypt-msys.portz  ctags.portz  doxygen.portz  dx80_mgw.portz  expat.mingw  expat.portz  freeglut.portz  gettext.mingw  gettext.portz  git.portz  google-breakpad.portz  idn.portz  java-ant.portz  lcov.portz  libiconv.portz  libnet.portz  libpcap.portz  libpqxx.mingw  libpqxx.portz  libssh2.portz  libtool.portz  lua.portz  makefoo.portz  mingw-runtime.portz  mingw-utils.portz  monotone.portz  omniorb.portz  openssl.portz  (+19 more)
repo/botan/: gcc-no-ansi.patch  info.txt  mingw-configure.patch  patch
repo/not-ported/: lcov.portz  wx.portz
scripts/: build_defs.sh  defs.sh  fetch_src.sh  functions.sh  install_staging.sh  package_defs.sh  runtime.sh
tools/: portz_build_dsp.bat  portz_build_sln.bat  portz_msvc.sh
(+21 files in other folders)
