#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AC_INIT([portz],[0.0.1],[z.zagorski@gmail.com])

AC_CONFIG_MACRO_DIR([autoconf_helpers/m4])
AC_CONFIG_AUX_DIR([autoconf_helpers/])
AC_CONFIG_SRCDIR([Makefile.in])
# Checks for programs.
AC_PROG_INSTALL

AC_MAKEFOO

dnl AC_CANONICAL_HOST
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

